Fixed navbar collapse on application layouts.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -204,7 +204,6 @@ body {
 }
 
 .app-card-container > .card {
-  margin-top: 35px;
   padding: 25px;
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -230,10 +229,6 @@ body {
   align-items: center;
 }
 
-.card-about {
-  margin-top: 55px;
-}
-
 .navbar.navbar-dark {
   z-index: 15;
 }
@@ -241,14 +236,14 @@ body {
 .site-wrapper {
   display: flex;
   justify-content: space-around;
-  height: 100%;
+  height: 70%;
   align-items: center;
 }
 
-.nav-super-id {
-  position: fixed;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.home-nav {
+  justify-content: space-around;
+}
+
+.navlink-split {
+  width: 100%;
 }
